// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convertToPostman any-auth 1`] = `
"{
  \\"info\\": {
    \\"name\\": \\"any-auth\\",
    \\"schema\\": \\"https://schema.getpostman.com/json/collection/v2.1.0/collection.json\\"
  },
  \\"variable\\": [
    {
      \\"key\\": \\"baseUrl\\",
      \\"value\\": \\"\\",
      \\"type\\": \\"string\\"
    },
    {
      \\"key\\": \\"username\\",
      \\"value\\": \\"\\",
      \\"type\\": \\"string\\"
    },
    {
      \\"key\\": \\"password\\",
      \\"value\\": \\"\\",
      \\"type\\": \\"string\\"
    },
    {
      \\"key\\": \\"My-Header\\",
      \\"value\\": \\"\\",
      \\"type\\": \\"string\\"
    }
  ],
  \\"auth\\": {
    \\"basic\\": [
      {
        \\"key\\": \\"username\\",
        \\"value\\": \\"{{username}}\\",
        \\"type\\": \\"string\\"
      },
      {
        \\"key\\": \\"password\\",
        \\"value\\": \\"{{password}}\\",
        \\"type\\": \\"string\\"
      }
    ],
    \\"type\\": \\"basic\\"
  },
  \\"item\\": [
    {
      \\"name\\": \\"Blog\\",
      \\"item\\": [
        {
          \\"name\\": \\"createPost\\",
          \\"request\\": {
            \\"url\\": {
              \\"raw\\": \\"{{baseUrl}}/create\\",
              \\"host\\": [
                \\"{{baseUrl}}\\"
              ],
              \\"path\\": [
                \\"create\\"
              ],
              \\"query\\": [],
              \\"variable\\": []
            },
            \\"header\\": [
              {
                \\"key\\": \\"My-Header\\",
                \\"value\\": \\"{{My-Header}}\\",
                \\"type\\": \\"string\\"
              }
            ],
            \\"method\\": \\"POST\\",
            \\"body\\": {
              \\"mode\\": \\"raw\\",
              \\"raw\\": \\"{\\\\n    \\\\\\"title\\\\\\": \\\\\\"example\\\\\\",\\\\n    \\\\\\"content\\\\\\": \\\\\\"example\\\\\\"\\\\n}\\",
              \\"options\\": {
                \\"raw\\": {
                  \\"language\\": \\"json\\"
                }
              }
            }
          },
          \\"response\\": [],
          \\"_type\\": \\"endpoint\\"
        },
        {
          \\"name\\": \\"getPost\\",
          \\"request\\": {
            \\"url\\": {
              \\"raw\\": \\"{{baseUrl}}/:postId\\",
              \\"host\\": [
                \\"{{baseUrl}}\\"
              ],
              \\"path\\": [
                \\":postId\\"
              ],
              \\"query\\": [],
              \\"variable\\": [
                {
                  \\"key\\": \\"postId\\",
                  \\"value\\": \\"\\"
                }
              ]
            },
            \\"header\\": [
              {
                \\"key\\": \\"My-Header\\",
                \\"value\\": \\"{{My-Header}}\\",
                \\"type\\": \\"string\\"
              }
            ],
            \\"method\\": \\"GET\\"
          },
          \\"response\\": [],
          \\"_type\\": \\"endpoint\\"
        }
      ],
      \\"_type\\": \\"container\\"
    }
  ]
}"
`;

exports[`convertToPostman test-api 1`] = `
"{
  \\"info\\": {
    \\"name\\": \\"Blog Post API\\",
    \\"schema\\": \\"https://schema.getpostman.com/json/collection/v2.1.0/collection.json\\"
  },
  \\"variable\\": [
    {
      \\"key\\": \\"baseUrl\\",
      \\"value\\": \\"prod.fern.com\\",
      \\"type\\": \\"string\\"
    },
    {
      \\"key\\": \\"X-API-Key\\",
      \\"value\\": \\"\\",
      \\"type\\": \\"string\\"
    }
  ],
  \\"auth\\": {
    \\"apikey\\": [
      {
        \\"key\\": \\"value\\",
        \\"value\\": \\"{{X-API-Key}}\\",
        \\"type\\": \\"string\\"
      },
      {
        \\"key\\": \\"key\\",
        \\"value\\": \\"{{X-API-Key}}\\",
        \\"type\\": \\"string\\"
      },
      {
        \\"key\\": \\"in\\",
        \\"value\\": \\"header\\",
        \\"type\\": \\"string\\"
      }
    ],
    \\"type\\": \\"apikey\\"
  },
  \\"item\\": [
    {
      \\"name\\": \\"Blog\\",
      \\"item\\": [
        {
          \\"name\\": \\"Create Blog Post\\",
          \\"request\\": {
            \\"description\\": \\"Creates a blog post and returns blog post id.\\",
            \\"url\\": {
              \\"raw\\": \\"{{baseUrl}}/create\\",
              \\"host\\": [
                \\"{{baseUrl}}\\"
              ],
              \\"path\\": [
                \\"create\\"
              ],
              \\"query\\": [],
              \\"variable\\": []
            },
            \\"header\\": [
              {
                \\"key\\": \\"X-API-Key\\",
                \\"value\\": \\"{{X-API-Key}}\\",
                \\"type\\": \\"string\\"
              },
              {
                \\"key\\": \\"x-service-header\\",
                \\"type\\": \\"text\\",
                \\"value\\": \\"\\\\\\"example\\\\\\"\\"
              },
              {
                \\"key\\": \\"x-endpoint-header\\",
                \\"description\\": \\"I'm a header!\\",
                \\"type\\": \\"text\\",
                \\"value\\": \\"\\\\\\"example\\\\\\"\\"
              }
            ],
            \\"method\\": \\"POST\\",
            \\"body\\": {
              \\"mode\\": \\"raw\\",
              \\"raw\\": \\"{\\\\n    \\\\\\"title\\\\\\": \\\\\\"example\\\\\\",\\\\n    \\\\\\"author\\\\\\": {\\\\n        \\\\\\"type\\\\\\": \\\\\\"name\\\\\\",\\\\n        \\\\\\"value\\\\\\": \\\\\\"George Washington\\\\\\"\\\\n    },\\\\n    \\\\\\"content\\\\\\": \\\\\\"example\\\\\\",\\\\n    \\\\\\"postType\\\\\\": \\\\\\"LONG\\\\\\"\\\\n}\\",
              \\"options\\": {
                \\"raw\\": {
                  \\"language\\": \\"json\\"
                }
              }
            }
          },
          \\"response\\": [],
          \\"_type\\": \\"endpoint\\"
        },
        {
          \\"name\\": \\"getPost\\",
          \\"request\\": {
            \\"description\\": \\"Gets a blog post.\\",
            \\"url\\": {
              \\"raw\\": \\"{{baseUrl}}/:postId\\",
              \\"host\\": [
                \\"{{baseUrl}}\\"
              ],
              \\"path\\": [
                \\":postId\\"
              ],
              \\"query\\": [],
              \\"variable\\": [
                {
                  \\"key\\": \\"postId\\",
                  \\"value\\": \\"123e4567-e89b-12d3-a456-426614174000\\"
                }
              ]
            },
            \\"header\\": [
              {
                \\"key\\": \\"X-API-Key\\",
                \\"value\\": \\"{{X-API-Key}}\\",
                \\"type\\": \\"string\\"
              },
              {
                \\"key\\": \\"x-service-header\\",
                \\"type\\": \\"text\\",
                \\"value\\": \\"\\\\\\"I'm a service header!\\\\\\"\\"
              }
            ],
            \\"method\\": \\"GET\\"
          },
          \\"response\\": [
            {
              \\"name\\": \\"Success\\",
              \\"status\\": \\"OK\\",
              \\"code\\": 200,
              \\"originalRequest\\": {
                \\"description\\": \\"Gets a blog post.\\",
                \\"url\\": {
                  \\"raw\\": \\"{{baseUrl}}/:postId\\",
                  \\"host\\": [
                    \\"{{baseUrl}}\\"
                  ],
                  \\"path\\": [
                    \\":postId\\"
                  ],
                  \\"query\\": [],
                  \\"variable\\": [
                    {
                      \\"key\\": \\"postId\\",
                      \\"value\\": \\"123e4567-e89b-12d3-a456-426614174000\\"
                    }
                  ]
                },
                \\"header\\": [
                  {
                    \\"key\\": \\"X-API-Key\\",
                    \\"value\\": \\"{{X-API-Key}}\\",
                    \\"type\\": \\"string\\"
                  },
                  {
                    \\"key\\": \\"x-service-header\\",
                    \\"type\\": \\"text\\",
                    \\"value\\": \\"\\\\\\"I'm a service header!\\\\\\"\\"
                  }
                ],
                \\"method\\": \\"GET\\"
              },
              \\"body\\": \\"{\\\\n    \\\\\\"writtenDate\\\\\\": \\\\\\"2022-12-15T22:06:28+00:00\\\\\\",\\\\n    \\\\\\"id\\\\\\": \\\\\\"123e4567-e89b-12d3-a456-426614174000\\\\\\",\\\\n    \\\\\\"type\\\\\\": \\\\\\"LONG\\\\\\",\\\\n    \\\\\\"title\\\\\\": \\\\\\"My Post\\\\\\",\\\\n    \\\\\\"author\\\\\\": {\\\\n        \\\\\\"type\\\\\\": \\\\\\"anonymous\\\\\\"\\\\n    },\\\\n    \\\\\\"content\\\\\\": \\\\\\"I'm a blog post\\\\\\"\\\\n}\\",
              \\"_postman_previewlanguage\\": \\"json\\"
            },
            {
              \\"name\\": \\"Post Not Found Error\\",
              \\"status\\": \\"Post Not Found Error\\",
              \\"code\\": 400,
              \\"originalRequest\\": {
                \\"description\\": \\"Gets a blog post.\\",
                \\"url\\": {
                  \\"raw\\": \\"{{baseUrl}}/:postId\\",
                  \\"host\\": [
                    \\"{{baseUrl}}\\"
                  ],
                  \\"path\\": [
                    \\":postId\\"
                  ],
                  \\"query\\": [],
                  \\"variable\\": [
                    {
                      \\"key\\": \\"postId\\",
                      \\"value\\": \\"123e4567-e89b-12d3-a456-426614174000\\"
                    }
                  ]
                },
                \\"header\\": [
                  {
                    \\"key\\": \\"X-API-Key\\",
                    \\"value\\": \\"{{X-API-Key}}\\",
                    \\"type\\": \\"string\\"
                  },
                  {
                    \\"key\\": \\"x-service-header\\",
                    \\"type\\": \\"text\\",
                    \\"value\\": \\"\\\\\\"I'm a service header!\\\\\\"\\"
                  }
                ],
                \\"method\\": \\"GET\\"
              },
              \\"body\\": \\"{\\\\n    \\\\\\"id\\\\\\": \\\\\\"123e4567-e89b-12d3-a456-426614174000\\\\\\"\\\\n}\\",
              \\"_postman_previewlanguage\\": \\"json\\"
            }
          ],
          \\"_type\\": \\"endpoint\\"
        }
      ],
      \\"_type\\": \\"container\\"
    },
    {
      \\"name\\": \\"My Folder\\",
      \\"item\\": [
        {
          \\"name\\": \\"Nested\\",
          \\"item\\": [
            {
              \\"name\\": \\"get\\",
              \\"request\\": {
                \\"url\\": {
                  \\"raw\\": \\"{{baseUrl}}\\",
                  \\"host\\": [
                    \\"{{baseUrl}}\\"
                  ],
                  \\"path\\": [],
                  \\"query\\": [],
                  \\"variable\\": []
                },
                \\"header\\": [
                  {
                    \\"key\\": \\"X-API-Key\\",
                    \\"value\\": \\"{{X-API-Key}}\\",
                    \\"type\\": \\"string\\"
                  },
                  {
                    \\"key\\": \\"x-service-header\\",
                    \\"type\\": \\"text\\",
                    \\"value\\": \\"\\\\\\"example\\\\\\"\\"
                  }
                ],
                \\"method\\": \\"GET\\"
              },
              \\"response\\": [],
              \\"_type\\": \\"endpoint\\"
            }
          ],
          \\"_type\\": \\"container\\"
        }
      ],
      \\"_type\\": \\"container\\"
    }
  ]
}"
`;
